--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 
 script:
     - docker run -v $(pwd)/dist:/dist  img
-    - $(pwd)/dist/es_cluster_exporter.linux-x86_64 --help 2> result
+    - $(pwd)/dist/es_cluster_exporter.linux-x86_64 --help 2> result  || true
 
     - echo "==> Validating the test results..."
     - sh -c "[ -s result ]"
